--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,10 @@ yarn-debug.log*
 yarn-error.log*
 package-lock.json
 .idea
+server/.env
 /server/node_modules
 /server/package-lock.json
 /client/node_modules
 /client/package-lock.json
+
 
