--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,8 @@ MONGO_URL=mongodb+srv://alina:TnHqc5KNI3bqGkxU@cluster0.2pcvr68.mongodb.net/meje
 
 ACCESS_SECRET=antidisestablishmentarianism
 REFRESH_SECRET=dichlorodiphenyltrichloroethane
+
+S3_BUCKET_NAME=mejerichanka
+S3_BUCKET_REGION=us-east-1
+S3_ACCESS_KEY=AKIA5HGTEKNRUJEFMUSM
+S3_SECRET_KEY=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
