--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "bezuh alina",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1431.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,8 +20,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
-    "uuid": "^9.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
