--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,22 @@ services:
   app:
     build:
       context: .
-    env_file:
-      - .env
     volumes:
-      - ./server:/server
-      - /server/node_modules
+      - ./server:/app
+      - /app/node_modules
     restart: on-failure
+    env_file:
+      - ./server/.env
     command: >
       sh -c "npm start"
 
   db:
     image: mongo
     env_file:
-      - .env
+      - ./server/.env
     volumes:
       - ./mongo_db:/data/db
-      - ./mongo-init.js:/docker_entrypoint-initdb.d/mongo-init.js:ro
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     restart: on-failure
 
   web:
@@ -28,5 +28,5 @@ services:
       - "80:80"
     restart: on-failure
     volumes:
-      - ./web:/usr/share/nginx/html
+      - ./frontend:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
