--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
     index index.html;
     root /usr/share/nginx/html;
-    client_max_body_size 20G;
+    client_max_body_size 20M;
 
     location / {
         try_files $uri$args $uri$args/ /index.html;
