--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   db:
     image: mongo
     env_file:
-      - .env
+      - ./server/.env
     volumes:
       - ./mongo_db:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
