--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "МЕЖИРІЧАНКА",
-  "name": "МЕЖИРІЧАНКА | УКРАЇНСЬКА КУХНЯ | ЧЕРВОНОГРАД",
+  "name": "МЕЖИРІЧАНКА | УКРАЇНСЬКА КУХНЯ | БЕНКЕТИ ЧЕРВОНОГРАД",
   "icons": [
     {
       "src": "favicon.ico", 
